fix landing hero on mobile

--- a/packages/augur-ui/src/modules/markets-list/components/landing-hero.styles.less
+++ b/packages/augur-ui/src/modules/markets-list/components/landing-hero.styles.less
@@ -66,7 +66,7 @@
     }
   }
 
-  @media @breakpoint-tablet {
+  @media @breakpoint-max-tablet {
     height: 100%;
     padding: @size-24 @size-16;
 
